2015-02-21 Howard Butler <howard@hobu.co>
	* src/lib_proj.cmake: define PROJ_LIB as part 
	of the compilation defines #261

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* src/lib_proj.cmake nad/CMakeLists.txt: cmake build: install
	nad.lst, geodesic.h. But not emess.h and pj_list.h (from Charles Karney)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* src/pj_gridinfo.c: remove trailing / from preprocessor line
	 (from Charles Karney)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* src/PJ_aitoff.c: define M_PI and M_PI_2 (needed for Windows)
	 (from Charles Karney)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* src/lib_proj.cmake: remove space from variable name to
	suppress policy warning. (from Charles Karney)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* src/bin_nad2bin.cmake: backward test for nad2nad warning.
	bad directory specified for emess (from Charles Karney)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* man/man1/proj.1 man/man1/cs2cs.1 man/man1/geod.1 man/man3/pj_init.3:
	fix various issues (#259)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* nad/Makefile.am: compatibility with proj-datumgrids-1.6RC1
	(patch by sebastic, #249)

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* nad/Makefile.am: fix install target when no .lla files are in
	nad subdirectory.

2015-02-21 Even Rouault <even.rouault@spatialys.com>
	* cmake/Makefile.am man/Makefile.am: install missing CMake support
	files for dist-all target

2015-02-20 Howard Butler <howard@hobu.co>
	* CMakeLists.txt cmake/Proj4Mac.cmake 
	man/CMakeLists.txt src/bin_cs2cs.cmake 
	src/lib_proj.cmake: Adapt Charles Karney 
	CMake patches for smoother build #258

2015-02-20 Howard Butler <howard@hobu.co>
	* config.guess config.sub: #257 update very old config.guess
	and config.sub

2015-02-17 Howard Butler <howard@hobu.co>
	* src/PJ_aitoff.c: #250 Inverse solution for Winkel Tripel 
	from Drazan Tutic 
